Refactor and configuration enviroment to use docker
